added static Paths.cs

--- a/VokabelTrainer3/VokabelTrainer3.Android/VokabelTrainer3.Android.csproj
+++ b/VokabelTrainer3/VokabelTrainer3.Android/VokabelTrainer3.Android.csproj
@@ -93,6 +93,7 @@
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
     <Folder Include="Resources\drawable\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VokabelTrainer3\VokabelTrainer3.csproj">
