--- a/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
+++ b/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
@@ -10,17 +10,68 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Vokabeln\Basic\AtTheHotel\At the hotel 1.txt" />
+    <None Remove="Vokabeln\Basic\AtTheHotel\At the hotel 2.txt" />
+    <None Remove="Vokabeln\Basic\CarRental\Car rental 1.txt" />
+    <None Remove="Vokabeln\Basic\CarRental\Car rental 22.txt" />
+    <None Remove="Vokabeln\Basic\GettingStarted\Getting started 1.txt" />
+    <None Remove="Vokabeln\Basic\GettingStarted\Getting started 2.txt" />
+    <None Remove="Vokabeln\Basic\GettingStarted\Getting started 3.txt" />
+    <None Remove="Vokabeln\Basic\GettingStarted\Getting started 4.txt" />
+    <None Remove="Vokabeln\Basic\GettingStarted\Getting started 5.txt" />
+    <None Remove="Vokabeln\Basic\GettingStarted\Getting started 6.txt" />
+    <None Remove="Vokabeln\Basic\TheJourney\The journey 1.txt" />
+    <None Remove="Vokabeln\Basic\TheJourney\The journey 2.txt" />
+    <None Remove="Vokabeln\Basic\TheJourney\The journey 3.txt" />
+    <None Remove="Vokabeln\Basic\TheJourney\The journey 4.txt" />
+    <None Remove="Vokabeln\Basic\TheJourney\The journey 5.txt" />
+    <None Remove="Vokabeln\Basic\TheJourney\The journey 6.txt" />
+    <None Remove="Vokabeln\Basic\TravellingAbroad\Travelling abroad 1.txt" />
+    <None Remove="Vokabeln\Basic\TravellingAbroad\Travelling abroad 2.txt" />
+    <None Remove="Vokabeln\Basic\TravellingAbroad\Travelling abroad 3.txt" />
+    <None Remove="Vokabeln\Basic\TravellingAbroad\Travelling abroad 4.txt" />
+    <None Remove="Vokabeln\Basic\TravellingAbroad\Travelling abroad 5.txt" />
+    <None Remove="Vokabeln\Basic\TravellingAbroad\Travelling abroad 6.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Vokabeln\Basic\AtTheHotel\At the hotel 1.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\AtTheHotel\At the hotel 2.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\CarRental\Car rental 1.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\CarRental\Car rental 22.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\GettingStarted\Getting started 1.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\GettingStarted\Getting started 2.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\GettingStarted\Getting started 3.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\GettingStarted\Getting started 4.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\GettingStarted\Getting started 5.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\GettingStarted\Getting started 6.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TheJourney\The journey 1.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TheJourney\The journey 2.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TheJourney\The journey 3.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TheJourney\The journey 4.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TheJourney\The journey 5.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TheJourney\The journey 6.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TravellingAbroad\Travelling abroad 1.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TravellingAbroad\Travelling abroad 2.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TravellingAbroad\Travelling abroad 3.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TravellingAbroad\Travelling abroad 4.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TravellingAbroad\Travelling abroad 5.txt" />
+    <EmbeddedResource Include="Vokabeln\Basic\TravellingAbroad\Travelling abroad 6.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\ChapterSelectionListViewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\WelcomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
