--- a/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
+++ b/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
@@ -66,6 +66,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Vokabeln\Advanced\" />
+    <Folder Include="Vokabeln\Custom\" />
   </ItemGroup>
 
   <ItemGroup>
