--- a/VokabelTrainer3/VokabelTrainer3.Android/VokabelTrainer3.Android.csproj
+++ b/VokabelTrainer3/VokabelTrainer3.Android/VokabelTrainer3.Android.csproj
@@ -60,10 +60,13 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\TextFileParser.cs" />
+    <Compile Include="Interfaces\ITextFileParser.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DirectoryService.cs" />
+    <Compile Include="Services\FileService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
