--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,8 @@ MigrationBackup/
 
 ###### -- Custom Ignore Section, Make sure all files you add to the git repo are below this line  --  ######
 
+Feedback/23.02.2019/1.PNG
+Feedback/23.02.2019/2.PNG
+Feedback/23.02.2019/4.PNG
+Feedback/23.02.2019/3.PNG
+Feedback/23.02.2019/5.PNG
