created VocabQuizPage.cs and its VM
updated ChapterSelectionListViewPageVM.cs for navigation.
-> _data is being cleared before creating the _data, is needed when navigating back to ChapterSelectionListViewPage

--- a/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
+++ b/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
@@ -73,6 +73,9 @@
     <EmbeddedResource Update="Views\ChapterSelectionListViewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\VocabQuizPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\WelcomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
