--- a/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
+++ b/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Vokabeln\Advanced\News\News 1.txt" />
+    <None Remove="Vokabeln\Advanced\News\News 2.txt" />
+    <None Remove="Vokabeln\Advanced\News\News 3.txt" />
+    <None Remove="Vokabeln\Advanced\News\News 4.txt" />
     <None Remove="Vokabeln\Basic\AtTheHotel\At the hotel 1.txt" />
     <None Remove="Vokabeln\Basic\AtTheHotel\At the hotel 2.txt" />
     <None Remove="Vokabeln\Basic\CarRental\Car rental 1.txt" />
@@ -36,6 +40,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Vokabeln\Advanced\News\News 1.txt" />
+    <EmbeddedResource Include="Vokabeln\Advanced\News\News 2.txt" />
+    <EmbeddedResource Include="Vokabeln\Advanced\News\News 3.txt" />
+    <EmbeddedResource Include="Vokabeln\Advanced\News\News 4.txt" />
     <EmbeddedResource Include="Vokabeln\Basic\AtTheHotel\At the hotel 1.txt" />
     <EmbeddedResource Include="Vokabeln\Basic\AtTheHotel\At the hotel 2.txt" />
     <EmbeddedResource Include="Vokabeln\Basic\CarRental\Car rental 1.txt" />
@@ -66,7 +74,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Vokabeln\Advanced\" />
     <Folder Include="Vokabeln\Custom\" />
   </ItemGroup>
 
