--- a/VokabelTrainer3/VokabelTrainer3.Android/Properties/AndroidManifest.xml
+++ b/VokabelTrainer3/VokabelTrainer3.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<application android:label="VokabelTrainer3.Android"></application>
+	<application android:label="VokabelTrainer3.Android" android:icon="@mipmap/icon"></application>
 </manifest>
