--- a/VokabelTrainer3/VokabelTrainer3.Android/VokabelTrainer3.Android.csproj
+++ b/VokabelTrainer3/VokabelTrainer3.Android/VokabelTrainer3.Android.csproj
@@ -77,7 +77,10 @@
     <PackageReference Include="Autofac">
       <Version>4.9.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
+    <PackageReference Include="NUnit">
+      <Version>3.11.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
