--- a/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
+++ b/VokabelTrainer3/VokabelTrainer3/VokabelTrainer3.csproj
@@ -71,7 +71,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.1" />
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
   </ItemGroup>
 
   <ItemGroup>
